Fix: message on small displays (editorpage)

--- a/public/css/editor.css
+++ b/public/css/editor.css
@@ -130,7 +130,7 @@ nav{
         display: none;
     }
     #smallDisplay{
-        margin-top: 120px;
+        padding-top: 120px;
         display: block;
     }
     #smallDisplay > p{
